--- a/my-svelte-projec/package.json
+++ b/my-svelte-projec/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "my-svelte-projec",
+	"name": "svelte-project-image",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "svelte-kit build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
